# Code-Hub

./: .gitignore  FkRuijie.cpp  README.md  nohup.out  ruijie
Arduino/LED_test_1/: LED_test_1.ino
Arduino/music_test/: music_test.ino
Arduino/test1/: test1.ino
CodeBlocks/stevex/: stevex.cbp
CodeBlocks/stevex1/: main.c  stevex1.cbp  stevex1.depend
Eclipse/Java/.metadata/: version.ini
Java/Java Lab/Lab 1/: Java&UML_Report_10011703_2017302341_谢元昊_J01.doc  Java&UML_Report_10011703_2017302341_谢元昊_J02.doc  Java&UML_Report_10011703_2017302341_谢元昊_J03.doc
Java/Java Lab/Lab 2/: Java&UML_Report_10011703_2017302341_谢元昊_J04.doc  Java&UML_Report_10011703_2017302341_谢元昊_J05.doc  Java&UML_Report_10011703_2017302341_谢元昊_J06.doc
Java/Java Lab/Lab 3/: Java&UML_Report_10011703_2017302341_谢元昊_U01.doc  Java&UML_Report_10011703_2017302341_谢元昊_U02.doc  Java&UML_Report_10011703_2017302341_谢元昊_U03.doc  Java&UML_Report_10011703_2017302341_谢元昊_U04.doc  Java&UML_Report_10011703_2017302341_谢元昊_U05.doc  U01.mdl  U03-05.mdl
Java/Java Lab/Lab 4/: 6.mdl  7.mdl  8-1.mdl  8-2.mdl  8-3-1.mdl  8-3-2.mdl  9.mdl  (+4 more)
Python/: Mandelbrot_image.py  QRCode.py  autoSubmit.py  fibs.py  if&loop.py  if.py  queryIP.py  rename.py
Python/ClassDemo/: class.ics  classInfo.xlsx  classInfo_xyh20190225.xlsx  class_sys20190826.ics  conf_classInfo.json  conf_classTime.json  excelReader.py  main.py  ~$classInfo.xlsx
Python/Network/: netLab_1.py
Python/autoLibrary/: autoLibrary.py  data1.txt  headers.json  room.json
Python/hex2bin/: YT32B1_STM32F103_demo.hex  hex2bin.py  testOutHex.hex
QT/SX_Calculator/: SX_Calculator.pro  mainwindow.ui
QT/build-SX_Calculator-Desktop_Qt_5_11_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
QT/build-test1-Desktop_Qt_5_11_0_clang_64bit-Debug/: Makefile  ui_mainwindow.h
QT/build-test1-Desktop_Qt_5_11_0_clang_64bit-Profile/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
QT/test1/: mainwindow.ui  test1.pro
QT/untitled/: main.cpp
SQL/ODBC/: example.py  odbc.py
SQL/PostgreSQL/: psql_191011_spj  spj.dup  student.dup  student_191011_cmd
STM32/1-2-3-LED呼吸灯程序/: CMakeLists.txt  YT32B1_STM32F103_demo.htm  YT32B1_STM32F103_demo.map  YT32B1_STM32F103_demo.plg  YT32B1_STM32F103_demo_Target 1.dep  configure.ac  led.d  main.d
STM32/1-2-3-LED呼吸灯程序/User/: main.c
STM32/1-2-4-按键控制LED程序/: CMakeLists.txt  YT32B1_STM32F103_demo.hex  YT32B1_STM32F103_demo.htm  YT32B1_STM32F103_demo.map  YT32B1_STM32F103_demo.plg  YT32B1_STM32F103_demo_Target 1.dep  main.d  sys.d
STM32/1-2-9-USART串口接收程序/: Makefile.am  Makefile.in  YT32B1_STM32F103_demo.hex  YT32B1_STM32F103_demo.htm  YT32B1_STM32F103_demo.lnp  YT32B1_STM32F103_demo.map  YT32B1_STM32F103_demo.plg  YT32B1_STM32F103_demo_Target 1.dep  config.h.in  configure  configure.ac  configure.scan  main.d
STM32/1-2-9-USART串口接收程序/User/: main.c
STM32/1-2-9-USART串口接收程序/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
STM32/First_STM32_test/: CMakeLists.txt
STM32/STM32CubeMX_test/: .cproject  .mxproject  .project  CMakeLists.txt  Makefile  STM32CubeMX_test.ioc  STM32CubeMX_test.xml  STM32F103C8Tx_FLASH.ld
STM32/TestAutomake/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  main.c
STM32/TestAutomake/.deps/: main.Po
STM32/TestAutomake/autom4te.cache/: output.1  requests  traces.0  traces.1
STM32/TestAutomake/includes/: funcA.c
STM32/cubemxTest_ADC_DMA/: .mxproject  Makefile  a.out  cubemxTest_ADC_DMA.ioc
STM32/cubemxTest_KeyLed/: .cproject.bak  .mxproject  .project.bak  CMakeLists.txt  Makefile  cubemxTest_KeyLed.ioc  cubemxTest_KeyLed.xml
VS Code/: Binary.cpp  DP.cpp  Number Theory.cpp  Union-Find Sets.cpp
VS for Mac/SunYB_test/: SunYB_test.sln
Wechat Dev/: project.config.json
Wechat Dev/::tmp/: app.json  project.config.json
Wechat Dev/NPUPA/: app.json  project.config.json
Wechat Dev/RF_Pay/: app.json  project.config.json
Xcode Test/MyPlayground.playground/: timeline.xctimeline
autogen_test/: Makefile.am  autogen.sh  configure.ac
autogen_test/src/: Makefile.am  auto_test.c
opencv test/opencv test/: main.cpp  t
opencv test/opencv test.xcodeproj/: project.pbxproj
ruijie.dSYM/Contents/: Info.plist
(+1935 files in other folders)
