AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=YTusart
YTusart_SOURCES=main.c delay.c delay.h flash.c flash.h rtc.c rtc.h sys.c sys.h usart.c usart.h core_cm3.c core_cm3.h stm32f10x.h system_stm32f10x.c system_stm32f10x.h buzzer.c buzzer.h midi.c key.c key.h led.c led.h stm32f10x_conf.h stm32f10x_it.c stm32f10x_it.h
